--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ FASTX = "c2308a5c-f048-11e8-3e8a-31650f418d12"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 
 [compat]
+FASTX = "2"
 julia = "1.6"
 
 [extras]
